--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -13,7 +13,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fitsSystemWindows="true"
+        android:background="@drawable/profile_bk"
         android:theme="@style/AppTheme.AppBarOverlay">
+
+        <ImageView
+            android:id="@+id/back_home_profile"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/back_to_home_button"
+            android:paddingLeft="20dp"
+            android:paddingTop="10dp"/>
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:id="@+id/toolbar_layout"
@@ -35,18 +44,24 @@
                 android:orientation="vertical"
                 android:id="@+id/linearLayout"
                 android:background="@drawable/profile_bk">
+<!--                <ImageView-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:src="@drawable/back_to_home_button"-->
+<!--                    />-->
 
                 <androidx.cardview.widget.CardView
                     android:layout_width="100dp"
                     android:layout_height="100dp"
                     android:elevation="12dp"
-                    android:id="@+id/view2"
+                    android:id="@+id/cardView"
                     app:cardCornerRadius="50dp"
                     android:layout_centerHorizontal="true"
                     android:innerRadius="0dp"
                     android:shape="ring"
                     android:thicknessRatio="1.9">
                     <ImageView
+                        android:id="@+id/image_user"
                         android:layout_width="wrap_content"
                         android:layout_height="120dp"
                         android:src="@drawable/profile_round"
@@ -56,16 +71,18 @@
 
 
                 <TextView
+                    android:id="@+id/userNameBar"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="\@appsnippuser"
+                    android:text="Cris"
                     android:textSize="28dp"
                     android:textStyle="bold"/>
 
                 <TextView
+                    android:id="@+id/emailBar"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="developer@appsnipp.com"
+                    android:text="developer@toannv.com"
                     android:textSize="12dp"
                     android:textStyle="bold"/>
 
@@ -84,8 +101,9 @@
                         android:background="@drawable/profile_bk"/>
 
                     <TextView
+                        android:id="@+id/change_photo"
                         style="@style/profileStyledBackButton"
-                        android:text="Back to\nHome" />
+                        android:text="Đổi ảnh\nĐại điện" />
                 </RelativeLayout>
 
             </LinearLayout>
