--- a/app/src/main/res/layout/content_profile.xml
+++ b/app/src/main/res/layout/content_profile.xml
@@ -18,7 +18,7 @@
 
         <TextView
             style="@style/headerText"
-            android:text="Account Info"
+            android:text="Thông tin tài khoản"
             android:layout_marginBottom="20dp"/>
 
         <RelativeLayout style="@style/profileDetailsLayout">
@@ -29,35 +29,36 @@
 
             <TextView
                 android:id="@+id/nameTextView"
-                android:text="Name"
+                android:text="Tên tài khoản"
                 android:layout_toRightOf="@id/nameImageView"
                 style="@style/profileDetailsTextMain" />
 
             <TextView
-                android:text="developer"
+                android:id="@+id/userNamePr"
+                android:text="Toannv"
                 android:layout_toRightOf="@id/nameImageView"
                 style="@style/profileDetailsMiniText" />
 
         </RelativeLayout>
 
-        <View style="@style/proifleDetailsView" />
-        <RelativeLayout style="@style/profileDetailsLayout">
-            <ImageView
-                android:id="@+id/mobileImageView"
-                android:src="@drawable/ic_mobile"
-                style="@style/profileDetailsImage" />
+<!--        <View style="@style/proifleDetailsView" />-->
+<!--        <RelativeLayout style="@style/profileDetailsLayout">-->
+<!--            <ImageView-->
+<!--                android:id="@+id/mobileImageView"-->
+<!--                android:src="@drawable/ic_mobile"-->
+<!--                style="@style/profileDetailsImage" />-->
 
-            <TextView
-                android:text="Mobile"
-                android:layout_toRightOf="@id/mobileImageView"
-                style="@style/profileDetailsTextMain"/>
+<!--            <TextView-->
+<!--                android:text="Mobile"-->
+<!--                android:layout_toRightOf="@id/mobileImageView"-->
+<!--                style="@style/profileDetailsTextMain"/>-->
 
-            <TextView
-                android:text="+91-8129999999"
-                android:layout_toRightOf="@id/mobileImageView"
-                style="@style/profileDetailsMiniText" />
+<!--            <TextView-->
+<!--                android:text="+91-8129999999"-->
+<!--                android:layout_toRightOf="@id/mobileImageView"-->
+<!--                style="@style/profileDetailsMiniText" />-->
 
-        </RelativeLayout>
+<!--        </RelativeLayout>-->
 
         <View style="@style/proifleDetailsView" />
         <RelativeLayout style="@style/profileDetailsLayout">
@@ -72,49 +73,50 @@
                 style="@style/profileDetailsTextMain" />
 
             <TextView
-                android:text="developer@appsnipp.com"
+                android:id="@+id/emailPr"
+                style="@style/profileDetailsMiniText"
                 android:layout_toRightOf="@id/emailImageView"
-                style="@style/profileDetailsMiniText" />
+                android:text="developer@toannv.com" />
 
         </RelativeLayout>
 
-        <View style="@style/proifleDetailsView" />
-        <RelativeLayout style="@style/profileDetailsLayout">
-            <ImageView
-                android:id="@+id/addressImageView"
-                android:src="@drawable/ic_address"
-                style="@style/profileDetailsImage" />
+<!--        <View style="@style/proifleDetailsView" />-->
+<!--        <RelativeLayout style="@style/profileDetailsLayout">-->
+<!--            <ImageView-->
+<!--                android:id="@+id/addressImageView"-->
+<!--                android:src="@drawable/ic_address"-->
+<!--                style="@style/profileDetailsImage" />-->
 
-            <TextView
-                android:text="Address"
-                android:layout_toRightOf="@id/addressImageView"
-                style="@style/profileDetailsTextMain" />
+<!--            <TextView-->
+<!--                android:text="Address"-->
+<!--                android:layout_toRightOf="@id/addressImageView"-->
+<!--                style="@style/profileDetailsTextMain" />-->
 
-            <TextView
-                android:text="Avenue 2nd Street NW SY."
-                android:layout_toRightOf="@id/addressImageView"
-                style="@style/profileDetailsMiniText" />
+<!--            <TextView-->
+<!--                android:text="Avenue 2nd Street NW SY."-->
+<!--                android:layout_toRightOf="@id/addressImageView"-->
+<!--                style="@style/profileDetailsMiniText" />-->
 
-        </RelativeLayout>
+<!--        </RelativeLayout>-->
 
-        <View style="@style/proifleDetailsView" />
-        <RelativeLayout style="@style/profileDetailsLayout">
-            <ImageView
-                android:id="@+id/dobImageView"
-                android:src="@drawable/ic_dob"
-                style="@style/profileDetailsImage" />
+<!--        <View style="@style/proifleDetailsView" />-->
+<!--        <RelativeLayout style="@style/profileDetailsLayout">-->
+<!--            <ImageView-->
+<!--                android:id="@+id/dobImageView"-->
+<!--                android:src="@drawable/ic_dob"-->
+<!--                style="@style/profileDetailsImage" />-->
 
-            <TextView
-                android:text="D.O.B"
-                android:layout_toRightOf="@id/dobImageView"
-                style="@style/profileDetailsTextMain" />
+<!--            <TextView-->
+<!--                android:text="D.O.B"-->
+<!--                android:layout_toRightOf="@id/dobImageView"-->
+<!--                style="@style/profileDetailsTextMain" />-->
 
-            <TextView
-                android:text="12-05-1990"
-                android:layout_toRightOf="@id/dobImageView"
-                style="@style/profileDetailsMiniText" />
+<!--            <TextView-->
+<!--                android:text="12-05-1990"-->
+<!--                android:layout_toRightOf="@id/dobImageView"-->
+<!--                style="@style/profileDetailsMiniText" />-->
 
-        </RelativeLayout>
+<!--        </RelativeLayout>-->
 
         <View style="@style/proifleDetailsView" />
 
