--- a/app/src/main/res/menu/menu_recipe.xml
+++ b/app/src/main/res/menu/menu_recipe.xml
@@ -2,6 +2,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+
+    <item
+        android:id="@+id/button_account"
+        app:showAsAction="ifRoom"
+        android:icon="@drawable/ic_baseline_account_circle_24"
+        android:title="" />
+
     <item
         android:id="@+id/button_filter"
         app:showAsAction="ifRoom"
