--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -4,25 +4,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/root_profile"
+    android:background="@color/profileBackground"
     android:fitsSystemWindows="true"
-    tools:context=".activity.ProfileActivity"
-    android:background="@color/profileBackground">
+    tools:context=".activity.ProfileActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/app_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fitsSystemWindows="true"
         android:background="@drawable/profile_bk"
+        android:fitsSystemWindows="true"
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <ImageView
             android:id="@+id/back_home_profile"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/back_to_home_button"
             android:paddingLeft="20dp"
-            android:paddingTop="10dp"/>
+            android:paddingTop="10dp"
+            android:src="@drawable/back_to_home_button" />
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:id="@+id/toolbar_layout"
@@ -30,42 +31,44 @@
             android:layout_height="match_parent"
             android:fitsSystemWindows="true"
             app:contentScrim="@color/profilePrimaryDark"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed"
-            app:toolbarId="@+id/toolbar_profile"
             app:expandedTitleMarginEnd="64dp"
             app:expandedTitleMarginStart="48dp"
-            app:expandedTitleTextAppearance="@style/TransparentText">
+            app:expandedTitleTextAppearance="@style/TransparentText"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed"
+            app:toolbarId="@+id/toolbar_profile">
 
             <LinearLayout
+                android:id="@+id/linearLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
+                android:background="@drawable/profile_bk"
                 android:gravity="center_horizontal"
-                android:orientation="vertical"
-                android:id="@+id/linearLayout"
-                android:background="@drawable/profile_bk">
-<!--                <ImageView-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:src="@drawable/back_to_home_button"-->
-<!--                    />-->
+                android:orientation="vertical">
+                <!--                <ImageView-->
+                <!--                    android:layout_width="wrap_content"-->
+                <!--                    android:layout_height="wrap_content"-->
+                <!--                    android:src="@drawable/back_to_home_button"-->
+                <!--                    />-->
                 <androidx.cardview.widget.CardView
+                    android:id="@+id/cardView"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
-                    android:elevation="12dp"
-                    android:id="@+id/cardView"
-                    app:cardCornerRadius="50dp"
                     android:layout_centerHorizontal="true"
+                    android:elevation="12dp"
                     android:innerRadius="0dp"
                     android:shape="ring"
-                    android:thicknessRatio="1.9">
+                    android:thicknessRatio="1.9"
+                    app:cardCornerRadius="50dp">
+
                     <ImageView
+                        android:id="@+id/image_user"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:id="@+id/image_user"
                         android:layout_alignParentTop="true"
                         android:layout_centerHorizontal="true"
-                        android:background="@drawable/ic_default_avatar"/>
+                        android:background="@drawable/ic_default_avatar"
+                        android:scaleType="centerCrop" />
                 </androidx.cardview.widget.CardView>
 
 
@@ -75,7 +78,7 @@
                     android:layout_height="wrap_content"
                     android:text="Cris"
                     android:textSize="28dp"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/emailBar"
@@ -83,21 +86,21 @@
                     android:layout_height="wrap_content"
                     android:text="developer@toannv.com"
                     android:textSize="12dp"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold" />
 
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:gravity="center"
                     android:layout_gravity="bottom"
                     android:layout_marginTop="20dp"
-                    android:background="@color/profileBackground">
+                    android:background="@color/profileBackground"
+                    android:gravity="center">
 
                     <View
-                        android:layout_alignParentTop="true"
                         android:layout_width="match_parent"
                         android:layout_height="30dp"
-                        android:background="@drawable/profile_bk"/>
+                        android:layout_alignParentTop="true"
+                        android:background="@drawable/profile_bk" />
 
                     <TextView
                         android:id="@+id/change_photo"
