--- a/app/src/main/res/layout/filter.xml
+++ b/app/src/main/res/layout/filter.xml
@@ -77,6 +77,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:id="@+id/filter_like"
+        android:visibility="gone"
         android:background="?android:attr/selectableItemBackground"
         android:padding="8dp">
 
