--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -103,6 +103,7 @@
                         android:background="@drawable/profile_bk" />
 
                     <TextView
+                        android:visibility="gone"
                         android:id="@+id/change_photo"
                         style="@style/profileStyledBackButton"
                         android:text="Đổi ảnh\nĐại điện" />
